<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainRootLayout"
    android:background="?attr/background_color"
    tools:context=".ui.news.MainActivity">

    <TextView
        android:id="@+id/tv_home"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/colorGreen"
        android:gravity="center"
        android:text="@string/home"
        android:textColor="?attr/text_color"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textAlignment="viewStart"
        android:src="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toBottomOf="@id/tv_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_home"
        app:tint="?attr/text_color" />

    <TextView
        android:id="@+id/country_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:gravity="center|start"
        android:text="@string/country"
        android:textColor="?attr/text_light_color"
        android:textSize="@dimen/_10ssp"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_home"
        app:layout_constraintWidth_percent=".5" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_country"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        android:background="@drawable/header"
        android:entries="@array/countries"
        android:textAlignment="viewStart"
        android:popupBackground="?attr/background_color"
        android:theme="@style/mySpinnerItemStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/country_label"
         />

    <TextView
        android:id="@+id/category_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:gravity="center|start"
        android:text="@string/category"
        android:textAlignment="viewStart"
        android:textColor="?attr/text_light_color"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toEndOf="@+id/country_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_home"
        app:layout_constraintWidth_percent=".5" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_category"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:background="@drawable/header"
        android:textAlignment="viewStart"
        android:entries="@array/categories"
        android:popupBackground="?attr/background_color"
        android:theme="@style/mySpinnerItemStyle"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_label"
         />


    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_country"
        android:orientation="vertical">

        <!-- Adding 7 rows of placeholders -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/data_placeholder_layout" />

            <include layout="@layout/data_placeholder_layout" />

            <include layout="@layout/data_placeholder_layout" />

            <include layout="@layout/data_placeholder_layout" />

            <include layout="@layout/data_placeholder_layout" />

            <include layout="@layout/data_placeholder_layout" />

            <include layout="@layout/data_placeholder_layout" />
        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/sp_country"
        android:layout_height="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            tools:listitem="@layout/news_item_layout"
            />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <TextView
        android:id="@+id/noDataAvailbale"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_country"
        android:text="@string/no_data_found"
        android:gravity="center"
        android:textColor="?attr/text_color"
        android:textSize="@dimen/_14sdp"
        android:visibility="gone"
        android:fontFamily="sans-serif-medium"
        android:layout_height="0dp">


    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>